# rust_onnx_batched

./: .gitignore  Cargo.toml  Cargo.toml.awesome  Cargo.toml.bak  Dockerfile  MODULAR.org  README.org  TEMPLATED.org  TRUE_QUEUE.org  build.rs  host.docker_build.sh  host.docker_run.sh  host.docker_run.txt  host.docker_run_main.sh  image_name.txt  infer.proto  infer.sh  setup_rocm_1.sh  setup_rocm_2.sh  shell.nix  start.sh
src/: client.rs  gpt5.rs  main.rs  main.rs.awesome  model.rs  mylib.rs  new.rs
