[package]
name = "onnxdeploy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
image = { version = "0.25.6", features = ["serde", "nasm"] }
ndarray = { version = "0.16.1", features = ["blas", "matrixmultiply-threading", "rayon", "serde"] }
serde = { version = "1.0", features = ["derive"] }
gxhash = "3.5.0"
bincode = { version = "2.0.1", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"

ort = { version = "2.0.0-rc.10", features = ["openvino"] }
